--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </div>
 
   <script>
-    const BACKEND_BASE = "https://dht-sz2z.onrender.com"; // เปลี่ยนเป็น server ของคุณ
+    const BACKEND_BASE = "https://dht-69wz.onrender.com"; // เปลี่ยนเป็น server ของคุณ
     const MAX_POINTS = 60;
     const series = { t: [], h: [], ts: [] };
 
