--- a/index.html
+++ b/index.html
@@ -1,180 +1,342 @@
 <!DOCTYPE html>
-<html lang="th">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Temperature & Humidity Monitor</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    /* CSS เดิมของคุณ */
-    :root{
-      --bg1:#0f2235; --bg2:#3c5570; --bg3:#a9b6c4;
-      --text:#f3f7fd; --muted:rgba(255,255,255,.85);
-      --panel:rgba(255,255,255,.12); --panel-2:rgba(255,255,255,.16);
-      --panel-card:#eef1f5; --panel-tint:rgba(0,0,0,.06);
-      --border:rgba(255,255,255,.24); --card-border:rgba(0,0,0,.08);
-      --shadow:0 28px 60px rgba(8,18,32,.35);
-      --lineT:#ffb870; --lineH:#7db9ff; --grid:rgba(0,0,0,.12);
+    /* === Root Colors (Pastel Palette) === */
+    :root {
+      --bg-gradient: linear-gradient(135deg, #c1f0f6, #fddde6);
+      --card-bg: rgba(255, 255, 255, 0.8);
+      --text-color: #333;
+      --muted-color: #666;
+      --temp-color: #ff9a76;
+      --hum-color: #76d7ff;
+      --border-color: rgba(0,0,0,0.1);
+      --shadow: 0 8px 20px rgba(0,0,0,0.15);
     }
-    *{box-sizing:border-box}
-    body{margin:0; min-height:100vh; color:var(--text); font-family:'Poppins',system-ui,Segoe UI,Arial,sans-serif;
-      background:
-        radial-gradient(1200px 900px at 100% -10%, rgba(255,255,255,.18) 0%, rgba(255,255,255,0) 60%),
-        linear-gradient(180deg, var(--bg1) 0%, var(--bg2) 55%, var(--bg3) 100%);
-      display:flex; align-items:center; justify-content:center; padding:28px;
+
+    * { box-sizing: border-box; margin:0; padding:0; }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: var(--bg-gradient);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 20px;
+      color: var(--text-color);
     }
-    /* ... ส่วน CSS เดิมทั้งหมด ... */
+
+    .board {
+      max-width: 1200px;
+      width: 100%;
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      grid-gap: 20px;
+    }
+
+    .bar {
+      grid-column: 1/-1;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 25px;
+      background: var(--card-bg);
+      border-radius: 15px;
+      box-shadow: var(--shadow);
+      margin-bottom: 20px;
+      font-weight: 600;
+      font-size: 1.2rem;
+    }
+
+    .card {
+      background: var(--card-bg);
+      border-radius: 15px;
+      padding: 20px;
+      box-shadow: var(--shadow);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 2rem;
+      color: var(--temp-color);
+    }
+
+    .tempRow {
+      display: flex;
+      align-items: baseline;
+      gap: 5px;
+      font-size: 2.5rem;
+      font-weight: 700;
+    }
+
+    .unit {
+      font-size: 1.5rem;
+      color: var(--muted-color);
+    }
+
+    .subtext {
+      margin-top: 8px;
+      font-size: 1rem;
+      color: var(--muted-color);
+    }
+
+    .side .card {
+      margin-bottom: 20px;
+      width: 100%;
+    }
+
+    .donut {
+      --p:0;
+      width: 80px; height: 80px;
+      border-radius: 50%;
+      background: conic-gradient(var(--hum-color) calc(var(--p) * 1%), #eee 0);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 700;
+      color: var(--text-color);
+      margin-left: auto;
+    }
+
+    .chart-card {
+      grid-column: 1/-1;
+      padding: 20px;
+    }
+
+    canvas {
+      width: 100%;
+      height: 250px;
+    }
+
+    .history table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+      background: var(--card-bg);
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .history th, .history td {
+      padding: 10px;
+      text-align: center;
+      border-bottom: 1px solid var(--border-color);
+    }
+
+    .history th {
+      background: #f0f0f0;
+      color: var(--text-color);
+    }
+
+    .status-wrap {
+      font-weight: 600;
+      font-size: 0.9rem;
+      text-align: center;
+      padding: 10px;
+      border-radius: 10px;
+      background: #fff3;
+    }
+
+    .legend {
+      display: flex;
+      gap: 15px;
+      margin-bottom: 10px;
+      font-size: 0.9rem;
+      color: var(--muted-color);
+    }
+
+    .dot {
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      margin-right: 4px;
+    }
+
+    .dot.t { background: var(--temp-color); }
+    .dot.h { background: var(--hum-color); }
+
   </style>
 </head>
 <body>
   <div class="board">
     <div class="bar">
-      <div class="place">Temperature & Humidity Dashboard</div>
-      <div class="chip" id="clock">--:--:--</div>
+      <div>Temperature & Humidity Dashboard</div>
+      <div id="clock">--:--:--</div>
     </div>
 
-    <div class="grid">
-      <section class="card main">
-        <div class="icon">☀️</div>
-        <div>
-          <div class="tempRow">
-            <div id="temperature-value">--</div>
-            <div class="unit">°C</div>
-          </div>
-          <div class="subtext">Temperature</div>
-        </div>
-      </section>
+    <section class="card main">
+      <div>🌡️</div>
+      <div class="tempRow">
+        <div id="temperature-value">--</div>
+        <div class="unit">°C</div>
+      </div>
+      <div class="subtext">Temperature</div>
+    </section>
 
-      <section class="side">
-        <div class="card">
-          <div class="row">
-            <div class="label">Humidity</div>
-            <div class="donut" id="humidity-donut" style="--p:0">
-              <span class="num" id="humidity-value">--%</span>
-            </div>
-          </div>
+    <section class="side">
+      <div class="card">
+        <div>💧 Humidity</div>
+        <div class="donut" id="humidity-donut" style="--p:0">
+          <span id="humidity-value">--%</span>
         </div>
+      </div>
 
-        <div class="card status-wrap">
-          <div id="status-message">Connecting...</div>
-        </div>
-      </section>
+      <div class="card status-wrap">
+        <div id="status-message">Connecting...</div>
+      </div>
+    </section>
 
-      <section class="card chart-panel chart-card">
-        <div class="legend">
-          <span style="display:flex;align-items:center;gap:6px"><span class="dot t"></span>Temp</span>
-          <span style="display:flex;align-items:center;gap:6px"><span class="dot h"></span>Humidity</span>
-        </div>
-        <canvas id="chart"></canvas>
-      </section>
+    <section class="card chart-card">
+      <div class="legend">
+        <span><span class="dot t"></span>Temp</span>
+        <span><span class="dot h"></span>Humidity</span>
+      </div>
+      <canvas id="chart"></canvas>
+    </section>
 
-      <section class="card history">
-        <h3 style="margin:0 0 10px 0; color:#2b3c54">ประวัติย้อนหลัง (MongoDB)</h3>
-        <div class="table-wrap">
-          <table>
-            <thead>
-              <tr>
-                <th>เวลา</th>
-                <th>อุณหภูมิ (°C)</th>
-                <th>ความชื้น (%RH)</th>
-              </tr>
-            </thead>
-            <tbody id="history-body"></tbody>
-          </table>
-        </div>
-      </section>
-    </div>
+    <section class="card history">
+      <h3 style="margin-bottom:10px; color:#333">History (MongoDB)</h3>
+      <div class="table-wrap">
+        <table>
+          <thead>
+            <tr>
+              <th>Time</th>
+              <th>Temperature (°C)</th>
+              <th>Humidity (%RH)</th>
+            </tr>
+          </thead>
+          <tbody id="history-body"></tbody>
+        </table>
+      </div>
+    </section>
   </div>
 
   <script>
-    const BACKEND_BASE = "https://dht-69wz.onrender.com"; // เปลี่ยนเป็น server ของคุณ
+    const BACKEND_BASE = "https://dht-69wz.onrender.com";
     const MAX_POINTS = 60;
     const series = { t: [], h: [], ts: [] };
 
-    function setText(id, value){ const el = document.getElementById(id); if (el) el.textContent = value; }
+    const setText = (id,val)=>{const el=document.getElementById(id); if(el) el.textContent=val;}
 
-    // ===== แสดงเวลาปัจจุบันในไทย =====
+    // ===== Clock =====
     function updateClock(){
-      const el = document.getElementById('clock'); if (!el) return;
-      const now = new Date();
-      el.textContent = now.toLocaleTimeString('th-TH',{hour:'2-digit',minute:'2-digit',second:'2-digit',hour12:false, timeZone:'Asia/Bangkok'});
+      const el=document.getElementById('clock'); 
+      if(!el) return;
+      el.textContent = new Date().toLocaleTimeString('en-US',{hour12:false,timeZone:'Asia/Bangkok'});
     }
-    updateClock(); setInterval(updateClock, 1000);
+    updateClock(); setInterval(updateClock,1000);
 
-    const canvas = document.getElementById('chart');
-    const ctx = canvas.getContext('2d');
-    let dpi = 1;
-    function resizeCanvas(){ const rect = canvas.getBoundingClientRect(); dpi = window.devicePixelRatio || 1; canvas.width=Math.round(rect.width*dpi); canvas.height=Math.round(rect.height*dpi); drawChart(1);}
-    window.addEventListener('resize', resizeCanvas); resizeCanvas();
+    // ===== Chart Setup =====
+    const canvas=document.getElementById('chart');
+    const ctx=canvas.getContext('2d');
+    let dpi = window.devicePixelRatio || 1;
+    function resizeCanvas(){
+      const rect=canvas.getBoundingClientRect();
+      canvas.width=Math.round(rect.width*dpi);
+      canvas.height=Math.round(rect.height*dpi);
+      drawChart(1);
+    }
+    window.addEventListener('resize',resizeCanvas); resizeCanvas();
 
-    function lerp(a,b,t){ return a + (b-a)*t; }
-    function niceRange(min,max){ if(min===max){min-=1; max+=1;} const pad=(max-min)*0.15; return [Math.floor(min-pad),Math.ceil(max+pad)]; }
-
-    let anim = { fromT:[], toT:[], fromH:[], toH:[], start:0, dur:800 };
-    function scheduleAnimation(){ anim.fromT=anim.toT.slice(); anim.fromH=anim.toH.slice(); anim.toT=series.t.slice(); anim.toH=series.h.slice(); anim.start=performance.now(); requestAnimationFrame(tick);}
-    function tick(now){ const p=Math.min(1,(now-anim.start)/anim.dur); drawChart(p); if(p<1) requestAnimationFrame(tick);}
-    function drawChart(progress=1){ /* ... ใช้โค้ดเดิมของคุณ ... */ }
-
-    function pushPoint(temp, hum, ts = Date.now()){
+    function lerp(a,b,t){ return a+(b-a)*t; }
+    function pushPoint(temp,hum,ts=Date.now()){
       series.t.push(Number(temp));
       series.h.push(Number(hum));
       series.ts.push(Number(ts));
-      if(series.t.length > MAX_POINTS){ series.t.shift(); series.h.shift(); series.ts.shift(); }
-      scheduleAnimation();
+      if(series.t.length>MAX_POINTS){series.t.shift(); series.h.shift(); series.ts.shift();}
+      drawChart(1);
     }
 
-    // ===== โหลดประวัติจาก MongoDB และแปลงเวลาไทย =====
-    async function loadHistory(limit = 120){
+    function drawChart(progress=1){
+      if(!ctx) return;
+      ctx.clearRect(0,0,canvas.width,canvas.height);
+      const w=canvas.width, h=canvas.height;
+      const pad=40;
+      if(series.ts.length<2) return;
+      const tMin=Math.min(...series.t), tMax=Math.max(...series.t);
+      const hMin=Math.min(...series.h), hMax=Math.max(...series.h);
+
+      // Temp line
+      ctx.beginPath();
+      series.t.forEach((v,i)=>{
+        const x=pad + i*(w-2*pad)/(series.t.length-1);
+        const y=h-pad-(v-tMin)/(tMax-tMin)*(h-2*pad);
+        if(i===0) ctx.moveTo(x,y); else ctx.lineTo(x,y);
+      });
+      ctx.strokeStyle='var(--temp-color)';
+      ctx.lineWidth=2*dpi;
+      ctx.stroke();
+
+      // Humidity line
+      ctx.beginPath();
+      series.h.forEach((v,i)=>{
+        const x=pad + i*(w-2*pad)/(series.h.length-1);
+        const y=h-pad-(v-hMin)/(hMax-hMin)*(h-2*pad);
+        if(i===0) ctx.moveTo(x,y); else ctx.lineTo(x,y);
+      });
+      ctx.strokeStyle='var(--hum-color)';
+      ctx.lineWidth=2*dpi;
+      ctx.stroke();
+    }
+
+    // ===== Load history =====
+    async function loadHistory(limit=120){
       try{
-        const res = await fetch(`${BACKEND_BASE}/history?limit=${limit}`, { cache: "no-store" });
-        const docs = await res.json();
-        const tbody = document.getElementById('history-body');
-        tbody.innerHTML = '';
-
-        docs.forEach(d => { 
-          // แปลงเวลาไทย
-          const tsThai = new Date(d.at).getTime() + 7*60*60*1000; // UTC+7
-          pushPoint(d.temperature, d.humidity, tsThai);
-        });
-
-        docs.forEach(d => {
-          const tr = document.createElement('tr');
-          const tStr = new Date(d.at).toLocaleString('th-TH',{hour12:false, timeZone:'Asia/Bangkok'});
-          tr.innerHTML = `<td>${tStr}</td><td>${Number(d.temperature).toFixed(1)}</td><td>${Number(d.humidity).toFixed(0)}</td>`;
+        const res=await fetch(`${BACKEND_BASE}/history?limit=${limit}`,{cache:"no-store"});
+        const docs=await res.json();
+        const tbody=document.getElementById('history-body');
+        tbody.innerHTML='';
+        docs.forEach(d=>{
+          const tsThai=new Date(d.at).getTime()+7*60*60*1000;
+          pushPoint(d.temperature,d.humidity,tsThai);
+          const tr=document.createElement('tr');
+          tr.innerHTML=`<td>${new Date(d.at).toLocaleString('en-US',{hour12:false,timeZone:'Asia/Bangkok'})}</td>
+                        <td>${Number(d.temperature).toFixed(1)}</td>
+                        <td>${Number(d.humidity).toFixed(0)}</td>`;
           tbody.appendChild(tr);
         });
-      }catch(e){ console.error('loadHistory error:', e);}
+      }catch(e){ console.error('loadHistory error:',e); }
     }
 
-    // ===== ดึงค่า realtime /data =====
+    // ===== Fetch realtime data =====
     async function fetchData(){
       try{
-        const res = await fetch(`${BACKEND_BASE}/data`, { cache: "no-store" });
-        const data = await res.json();
-        if(data.temperature !== null){
-          const t = Number(data.temperature);
-          setText("temperature-value", t.toFixed(1));
-          if(!isNaN(t) && data.humidity !== null){
-            const ts = data.at ? new Date(data.at).getTime() + 7*60*60*1000 : Date.now(); // เวลาไทย
-            pushPoint(t, Number(data.humidity), ts);
+        const res=await fetch(`${BACKEND_BASE}/data`,{cache:"no-store"});
+        const data=await res.json();
+        if(data.temperature!==null){
+          const t=Number(data.temperature);
+          setText("temperature-value",t.toFixed(1));
+          if(!isNaN(t) && data.humidity!==null){
+            const ts = data.at ? new Date(data.at).getTime()+7*60*60*1000 : Date.now();
+            pushPoint(t,Number(data.humidity),ts);
           }
         }
-        if(data.humidity !== null){
-          const h = Number(data.humidity);
-          setText("humidity-value", `${h.toFixed(0)}%`);
-          const donut = document.getElementById('humidity-donut');
-          if(donut) donut.style.setProperty('--p', Math.max(0, Math.min(100, h)));
+        if(data.humidity!==null){
+          const h=Number(data.humidity);
+          setText("humidity-value",`${h.toFixed(0)}%`);
+          const donut=document.getElementById('humidity-donut');
+          if(donut) donut.style.setProperty('--p', Math.max(0,Math.min(100,h)));
         }
-        setText("status-message", "Data updated ✅");
-      }catch(err){ console.error("Fetch error:", err); setText("status-message","Error fetching data ⚠️"); }
+        setText("status-message","Data updated ✅");
+      }catch(err){ console.error(err); setText("status-message","Error fetching data ⚠️"); }
     }
 
-    // เริ่มโหลดประวัติและ polling
     loadHistory(120).finally(()=>{
       fetchData();
-      setInterval(fetchData, 5000);
+      setInterval(fetchData,5000);
     });
   </script>
 </body>
